generate bill with swiss qr