@@ -4,8 +4,10 @@ import ch.simonegli.billy.customer.Customer;
 import ch.simonegli.billy.customer.CustomerService;
 import picocli.CommandLine;
 
+import java.io.File;
 import java.io.IOException;
 import java.math.BigDecimal;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.LocalDate;
 import java.util.List;
@@ -26,12 +28,23 @@ public class BillCommand implements Callable<Integer> {
     @CommandLine.Option(names = {"-o", "--output"}, description = "Output file path", required = true)
     private Path outputPath;
 
+    @CommandLine.Option(names = {"-acc", "--account"}, description = "Account number for QR bill", required = true)
+    private String account;
+
+    @CommandLine.Option(names = {"-ref", "--reference"}, description = "Reference number for QR bill", required = false)
+    private String reference;
+
+    @CommandLine.Option(names = {"-msg", "--message"}, description = "Unstructured message for QR bill", required = false)
+    private String unstructuredMessage;
+
     private final CustomerService customerService;
     private final BillService billService;
+    private final QrBillService qrBillService;
 
-    public BillCommand(CustomerService customerService, BillService billService) {
+    public BillCommand(CustomerService customerService, BillService billService, QrBillService qrBillService) {
         this.customerService = customerService;
         this.billService = billService;
+        this.qrBillService = qrBillService;
     }
 
     @Override
@@ -39,7 +52,7 @@ public class BillCommand implements Callable<Integer> {
         Optional<Customer> customer = customerService.getCustomerById(customerId.toString());
 
         if (customer.isEmpty()) {
-            System.err.println("Customer not found");
+            System.err.println("Kunde nicht gefunden: " + customerId);
             return 1;
         }
 
@@ -51,10 +64,18 @@ public class BillCommand implements Callable<Integer> {
                     BigDecimal pricePerKm = new BigDecimal(parts[2]);
                     return new Ride(date, distance, pricePerKm);
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         Bill bill = new Bill(customer.get(), rideList);
 
+        // Calculate total amount for QR bill
+        double totalAmount = bill.getTotal().doubleValue();
+
+        // Generate QR bill PNG
+        byte[] qrBillPng = qrBillService.generateQrBillPng(customer.get(), account, reference, unstructuredMessage, totalAmount);
+        bill.setQrBillPng(qrBillPng);
+
+        // Generate main bill PDF
         billService.createPdf(bill, outputPath);
 
         System.out.println("Rechnung erfolgreich erstellt unter " + outputPath);
